--- a/layouts/partials/widgets/social.html
+++ b/layouts/partials/widgets/social.html
@@ -66,7 +66,14 @@
             </a>
         </div>
         {{- end }}
-        {{- with .Site.Params.widgets.social.email }}
+        {{- with .Site.Params.widgets.social.codewars }}
+        <div class="widget-social__item widget__item">
+            <a class="widget-social__link widget__link btn" title="My Codewars" rel="noopener noreferrer" href="https://www.codewars.com/users/{{ . }}" target="_blank">
+                {{ partial "svg/codewars.svg" (dict "class" "widget-social__link-icon") }}
+                <span>Codewars</span>
+            </a>
+        </div>
+        {{- end }}        {{- with .Site.Params.widgets.social.email }}
         <div class="widget-social__item widget__item">
             <a class="widget-social__link widget__link btn" title="Contact me over Email" href="mailto:{{ . }}">
                 {{ partial "svg/email.svg" (dict "class" "widget-social__link-icon") }}
