--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -67,4 +67,10 @@
 {{- end }}
 {{- partial "mathjax.html" . -}}
 </body>
+{{ if .Page.Store.Get "hasMermaid" }}
+<script src="https://cdn.jsdelivr.net/npm/mermaid/dist/mermaid.min.js"></script>
+<script>
+	mermaid.initialize({ startOnLoad: true });
+</script>
+{{ end }}
 </html>
