--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -68,7 +68,7 @@
 {{- partial "mathjax.html" . -}}
 </body>
 {{ if .Page.Store.Get "hasMermaid" }}
-<script src="https://cdn.jsdelivr.net/npm/mermaid/dist/mermaid.min.js"></script>
+<script src="/js/mermaid.min.js"></script>
 <script>
 	mermaid.initialize({ startOnLoad: true });
 </script>
