--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -68,7 +68,7 @@
 {{- partial "mathjax.html" . -}}
 </body>
 {{ if .Page.Store.Get "hasMermaid" }}
-<script src="https://unpkg.com/mermaid@9.3.0/dist/mermaid.min.js"></script>
+<script src="/js/9.3.0/mermaid.min.js"></script>
 <script>
 	mermaid.initialize({ startOnLoad: true });
 </script>
