--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -67,8 +67,8 @@
 {{- end }}
 {{- partial "mathjax.html" . -}}
 </body>
-{{ if .Page.Store.Get "hasMermaid" }}
-<script src="/js/9.3.0/mermaid.min.js"></script>
+{{ if .Page.Store.Get "hasMermaid-disabled" }}
+<script src="https://cdn.jsdelivr.net/npm/mermaid/dist/mermaid.min.js"></script>
 <script>
 	mermaid.initialize({ startOnLoad: true });
 </script>
